books/projects/rac/tests/yaml_test/data_types/typedef-redeclaration.ref.stderr
typedef-redeclaration.cpp:4: syntax error, unexpected TYPEID, expecting ID
