books/projects/rac/tests/yaml_test/data_types/typedef-redeclaration.cpp
// RAC begin

typedef int MyType;
typedef int MyType;

// RAC end
